2007-07-03  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects/AbstractProjectConfiguration.cs: little fix for
	  signing.

2007-07-03  Mike Krüger <mkrueger@novell.com> 

	* Makefile.am: added strong naming support to project configuration.

2007-06-30 Jerome Haltom <wasabi@larvalstage.net>

	* MonoDevelop.Projects/DotNetProject.cs: Check for null 
	  ActiveConfiguration.

2007-06-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Parser/AssemblyCodeCompletionDatabase.cs: Read
	  assembly's references only when the assembly has changed since it
	  was parsed for the last time. Reduces loading time.

2007-06-06  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Serialization/GenericCollectionHandler.cs: Unset
	  itemParam after using it for calling a method using reflection.

2007-06-06  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.Projects/Project.cs (Dispose): Remove event handler for
	FileWatcher.	     
	* MonoDevelop.Projects.Parser/CodeCompletionDatabase.cs (Dispose):
	Remove handler for PropertyChanged event.

2007-05-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Parser/IClass.cs,
	  MonoDevelop.Projects.Parser/CompoundClass.cs,
	  MonoDevelop.Projects.Parser/DefaultClass.cs,
	  MonoDevelop.Projects.Parser/ProjectCodeCompletionDatabase.cs,
	  MonoDevelop.Projects.Parser/ClassWrapper.cs,
	  MonoDevelop.Projects.Parser/CodeCompletionDatabase.cs: Added
	  SourceProject property to IClass, which returns the project where
	  the class is implemented, or null if there is no project for that
	  class.

2007-05-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Parser/AssemblyInformation.cs: Removed unused
	  code. Load debug symbols if an mdb file exists.

2007-05-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Parser.Cecil/MonoSymbolWriter.cs,
	  MonoDevelop.Projects.Parser.Cecil/MonoSymbolFile.cs,
	  MonoDevelop.Projects.Parser.Cecil/MdbWriter.cs,